# mahalanobis-concept-drift

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  sample_labeled.csv  sample_unlabeled.csv
docs/: algorithm_description_ru.md  api_reference.md  demo_scenario_ru.md  program_description_ru.md  user_guide_ru.md
scripts/: run_demo.py
src/mcd/: app_streamlit.py  cli.py  config.py  io.py  preprocessing.py
src/mcd/embedding/: __init__.py  base.py  sbert.py  transformer.py
src/mcd/modeling/: __init__.py  classifier.py  covariance.py  drift.py  mahalanobis.py  thresholds.py
src/mcd/persistence/: __init__.py  artifacts.py
src/mcd/reporting/: export.py  schema.py
src/mcd/visualization/: projection.py  scatter.py
tests/: test_artifacts_roundtrip.py  test_mahalanobis.py  test_pipeline_smoke.py  test_thresholds.py
